# neon-demo

./: CMakeLists.txt  README.md  build.py  run.py
include/: abs.h  add.h  bit.h  compare.h  convert.h  count.h  create.h  get.h  load.h  manipulation.h  maxmin.h  mla.h  mls.h  mul.h  negative.h  reciprocal.h  round.h  set.h  shift.h  store.h  sub.h  utilities.h
src/: abs.cpp  add.cpp  bit.cpp  compare.cpp  convert.cpp  count.cpp  create.cpp  get.cpp  load.cpp  main.cpp  manipulation.cpp  maxmin.cpp  mla.cpp  mls.cpp  mul.cpp  negative.cpp  reciprocal.cpp  round.cpp  set.cpp  shift.cpp  store.cpp  sub.cpp  utilities.cpp
